# system-reforge

./: CLAUDE.md  README.md  docker-compose.yml
server/: alembic.ini  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_tables.py
server/api/: dependencies.py  error_handlers.py
server/api/routes/: analysis.py  jobs.py  projects.py  upload.py
server/api/schemas/: analysis.py  business_rule.py  requirement.py
server/app/: main.py
server/app/api/: dependencies.py  error_handlers.py
server/app/application/: __init__.py
server/app/config/: settings.py
server/app/domain/: exceptions.py
server/application/: __init__.py  create_project.py  export_requirements.py  get_flow_data.py  get_job.py  get_requirements.py  list_jobs.py  list_projects.py  update_requirement.py  upload_source.py
server/application/analysis/: __init__.py  extract_business_rules.py  get_business_rules.py  get_dependency_graph.py  get_source_files_for_job.py
server/application/jobs/: __init__.py  run_analysis.py  start_analysis.py
server/application/projects/: __init__.py  delete_project.py  get_project.py
server/application/requirements/: __init__.py
server/application/sources/: __init__.py  upload_source.py  zip_extractor.py
server/config/: __init__.py  settings.py
server/domain/models/: __init__.py  analysis_job.py  business_rule.py  requirement.py  source_file.py
server/domain/repositories/: analysis_job_repository.py  business_rule_repository.py  dependency_edge_repository.py  project_repository.py  requirement_repository.py  (+1 more)
(+161 files in other folders)
