[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.83",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.29.0",
]
